# BudgetCLI

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_READY.txt  LICENSE  Makefile  README.md  ROADMAP.md  STRUCTURE.txt  TRANSACTION_FIX.md  examples.sh  pyproject.toml  pytest.ini  requirements.txt  test_cli_workflow.sh  verify_cli.py
.github/workflows/: tests.yml
budgetcli/: __init__.py
budgetcli/cli/: __init__.py  budgets.py  main.py  reports.py  transactions.py  tui.py  tui_menus.py  tui_utils.py
budgetcli/core/: __init__.py  calculations.py  services.py  validators.py
budgetcli/database/: __init__.py  connection.py  migrations.py  models.py
budgetcli/tests/: __init__.py  conftest.py  test_calculations.py  test_exporters.py  test_services.py  test_tui.py  test_validators.py
budgetcli/utils/: __init__.py  ascii_charts.py  exporters.py
